<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.foodstoreapp.ui.home.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.foodstoreapp.ui.menu.MenuFragment"
        android:label="@string/fragment_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.example.foodstoreapp.ui.orders.OrdersFragment"
        android:label="@string/fragment_orders"
        tools:layout="@layout/fragment_orders"/>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.foodstoreapp.ui.profile.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>